--- a/source/App.html
+++ b/source/App.html
@@ -151,7 +151,7 @@ body{
             <br><br><br><br><br><br><br><br><br><br><br>
 
             <h1>Weather Web</h1>
-            <p>Our website also offers a high quality mobile app wher you can <br> stay up to date on the weather at any given time of the day!</p>
+            <p>Our website also offers a high quality mobile app wher you can stay<br>up to date on the weather at any given time of the day!</p>
             <a href="" class="Buton">Download the app today for free!</a>
         </div>
     </td>
