--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Web</title>
    <link rel="stylesheet" href="index.css">
    
 </head>
@@ -1206,11 +1206,11 @@
                 WeatherWeb is an ideal place to get accurate, <br>
                 up-to-date, and detailed weather forecast information.</p>
             <br><br><br>
-            <a href="App.html" class="boton1"> Download APP</a></th>
+            <a href="App.html" target="_blank" class="boton1"> Download APP</a></th>
            <th style="width: 800px;" > <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1504722.0656940266!2d19.7809231121342!3d42.55719786273577!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13537af354bf7df1%3A0xbfffeedfabc31791!2sKosovo!5e0!3m2!1sen!2s!4v1637336263425!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></th>
         <th style="width: 350px; text-align: left;">
-            <form action="" style="background-color: black;">
-                <fieldset style="padding: 15px; border-color: black;">
+            <form action="" style="background-color: darkblue;">
+                <fieldset style="padding: 15px; border-color: darkblue;">
                     <legend style="padding: 5px; color: white;font-family: monospace;">Contact us</legend>
                     <label for="name" class="form1">Name and lastname</label><br>
                     <input type="text" class="form2"><br><br>
@@ -1234,7 +1234,9 @@
        
         
         </table>
+        <address>
         <a style="color: white; font-size: 20px;text-decoration: underline; padding: 10px;" href="index.html"> www.WeatherWeb.com</a>
+    </address>
         </footer>
 </body>
 </html>
