--- a/source/News.html
+++ b/source/News.html
@@ -51,6 +51,7 @@
     
                 <img src="images/mt.jpg" alt="">
                 <p>
+                  <span>
                     Mot i qëndrueshëm deri në fundjavë, me vranësira e diell. Në viset malore kryesisht në Rugovë mundësi për reshje bore.
                    
                     Sot do të mbajë mot i ftohtë, me vranësira dhe intervale me diell. Temperaturat e ajrit gjatë ditës së sotme do të luhatën nga 1 deri në 8 °C.
