--- a/source/News.html
+++ b/source/News.html
@@ -98,6 +98,20 @@
         </div>
       </main>
     </div>
+    <div style="display: flex; background-color: darkblue;"  >
+    <div  >
+        <video controls width="750px" style="margin-left: 20px; margin-top: 10px;">
+            <source src="images/Bay Area Forecast_ More Storms Bring Rain & Heavy Sierra Snow (1).mp4">
+        </video>
+    </div>
+    <div>
+        <video controls width="750px" style="margin-left: 33px; margin-top: 10px; margin-right: 20px;" >
+            <source src="images/Weather Forecast.mp4">
+        </video>
+    </div>
+    
+</div>
+
     <footer>
         <table>
             <tr>
