--- a/source/App.html
+++ b/source/App.html
@@ -50,12 +50,14 @@
             <div class="foto1">
                 <img src="images/IMG2.png">
             </div>
-            <div class="foto2">
-                <a href=""><img src="images/Apple.png"></a>
-            </div>
-            <div class="foto3">
-                <a href=""> <img src="images/Android.png"></a>
-            </div>
+            <figure id="figure1">
+                <img src="images/Apple.png" width="250px" height="85px">
+                <figcaption>Apple</figcaption>
+            </figure>
+            <figure id="figure2">
+                <img src="images/Android.png" width="250px" height="85px">
+                <figcaption>Android</figcaption>
+            </figure>
         </section>
         </div>
             <div class="foto4">
@@ -78,7 +80,7 @@
                 <img src="images/app_image_3.png">
             </div>
             <div class="problem">
-                <p>*If you are having any problems with our app, please</p>
+                <p>*If you are having any problems with our app</p>
             </div>
             <div class="tekstt3">
                 <h1>Contact us</h1>
@@ -93,6 +95,17 @@
                     <input type="submit" class="btn" value="Send Message"></input>
                 </form>
             </div>
-        
+            <!--Pjesa e svg-->
+            <svg id="svg1"height="100" width="500">
+                <ellipse cx="240" cy="50" rx="220" ry="30" style="fill:#47c35a" />
+                <ellipse cx="220" cy="50" rx="190" ry="20" style="fill:white" />
+              </svg>    
+            <svg id="svg2"height="80" width="300">
+                <g fill="none">
+                  <path stroke="red" d="M5 20 l215 0" />
+                  <path stroke="black" d="M5 40 l215 0" />
+                  <path stroke="blue" d="M5 60 l215 0" />
+                </g>
+              </svg>
 </body>
 </html>
