--- a/source/App.html
+++ b/source/App.html
@@ -107,5 +107,8 @@
                   <path stroke="blue" d="M5 60 l215 0" />
                 </g>
               </svg>
+              <div class="circle">
+              </div>
+
 </body>
 </html>
