--- a/source/App.html
+++ b/source/App.html
@@ -110,5 +110,7 @@
               <div class="circle">
               </div>
 
+            <canvas id="canvas"></canvas>
+            <script src="App.js"></script>
 </body>
 </html>
