--- a/source/App.html
+++ b/source/App.html
@@ -39,7 +39,8 @@
             </nav>
         </header>
             <div class="text">
-                <h1>Weather Web</h1>
+                <h1 id="header"></h1>
+                <script src="App.js"></script>
                 <p>Stay up to date on the weather with our easy-to-use Application!<br>
                     Download the app today for free and enjoy superior accurate
                     weather forecasting <br>on your Android & iOS device.</p>
@@ -69,12 +70,22 @@
             <div class="tekstt2">
                 <p> - Real-time weather conditions for any location in the world.<br>
                     - Our app searches for your location automatically and provides<br>
-                      the current temperature in Celsius and Fahrenheit, sunrise and sunset times<br>
+                      the current temperature in Celsius, Fahrenheit, Kelvin ,sunrise and sunset times<br>
                       according to city time zone.<br>
                     - Down-to-minute weather forecast & accurate hourly, daily forecasts
                     - Weather updates, alerts, and warnings (rain, storm, thunderstorm, ...).<br>
                     - Display weather right on the home screen </p>
-    
+                    <!--Js Array-->
+                    <p id="array"></p>
+
+                    <script>
+                     const temperature = [
+                                  "&#8451",
+                                  "&#8457",
+                                  "&#8490"
+                                  ];
+                   document.getElementById("array").innerHTML = temperature;
+                   </script>
             </div>
             <div class="foto5">
                 <img src="images/app_image_3.png">
@@ -92,7 +103,14 @@
                     <input type="text" class="input-field" placeholder="Surname">
                     <input type="email" class="input-field" placeholder="Email">
                     <textarea type="text" class="input-field textarea-field" placeholder="Your message"></textarea>
-                    <input type="submit" class="btn" value="Send Message"></input>
+                    <input type="submit" class="btn" value="Send Message" onclick="myFunction()"></input>
+                    <script>
+                        function myFunction() 
+                        {
+                            alert("Your message has been sent!");
+                        }
+                    </script>
+                    <!--Alert box-->
                 </form>
             </div>
             <!--Pjesa e svg-->
