--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
                 <p class="lead" >Enter Your Location</p>
                 <input type="text" id="searchUser" class="form-control" placeholder="Location" style="  border: 0;
                 outline: 0;border-bottom: white solid 0.5px;width: 800px; font-size: 30px;
-                 font-family: monospace; background-color: transparent;">
+                 font-family: monospace; background-color: transparent; color: white;">
             </div>
             <br>
             <div id="profile"></div>
